:sparkles: dash update

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,5 +1,4 @@
 node_modules/**/*
-.expo/*
 npm-debug.*
 *.jks
 *.p8
@@ -8,6 +7,7 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
+.env
 
 # macOS
 .DS_Store
