--- a/server/package.json
+++ b/server/package.json
@@ -8,19 +8,27 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.14",
+    "nodemailer-express-handlebars": "^4.0.0",
     "sqlite3": "^5.0.0",
     "typeorm": "^0.2.28",
     "yup": "^0.29.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.4",
     "@types/node": "^14.11.8",
+    "@types/nodemailer": "^6.4.0",
     "@types/yup": "^0.29.8",
     "ts-node-dev": "^1.0.0-pre.64",
     "typescript": "^4.0.3"
